# Projet_L3_REMAKE

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/: main.py
backend/core/: config.py  model_loader.py
backend/routers/: classifier.py  colorizer.py  denoiser.py
frontend/static/css/: theme.css
frontend/static/js/: classifier.js  colorizer.js  denoiser.js
frontend/templates/: classifier.html  colorizer.html  denoiser.html  index.html
ml/classifier/: data.py  model.py  predict.py
ml/colorizer/: colorize.py  colorizer.py  data.py  model.py
ml/denoiser/: data.py  model.py  predict.py
models/: model_cars_vs_planes.keras  model_cats_vs_dog.keras  model_classifier.keras  model_colorizer.keras  model_denoiser.keras
notebooks/: classifier_training.ipynb  colorizer_training.ipynb  denoiser_training.ipynb
scripts/cars_vs_planes/: creer_modele.py  entrainer.py  predire.py  telecharger_jd.py  traitement_jd.py
scripts/cats_vs_dogs/: classifier_cats_vs_dog.py
scripts/colorizer/: history.pkl
static/: style.css
static/js/: script_classifier.js  script_coloriseur.js
static/src/: input.css
templates/: classifier.html  coloriseur.html  index.html
